# docs/swagger.json
@@ -73,11 +73,11 @@
                 "parameters": [
                     {
                         "description": "make_wechat_order_req",
-                        "name": "wecaht_ord_req",
+                        "name": "make_ord_req",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/services.MakeWechatOrderReq"
+                            "$ref": "#/definitions/services.MakeOrderReq"
                         }
                     }
                 ],
@@ -103,8 +103,50 @@
                 }
             }
         },
+        "/orders/wechat/close/{trade_no}": {
+            "put": {
+                "description": "close order",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Orders"
+                ],
+                "summary": "close order",
+                "operationId": "Close",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "trade no",
+                        "name": "trade_no",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.WechatOrderDetail"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request",
+                        "schema": {
+                            "$ref": "#/definitions/cns_errors.RainbowErrorDetailInfo"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server error",
+                        "schema": {
+                            "$ref": "#/definitions/cns_errors.RainbowErrorDetailInfo"
+                        }
+                    }
+                }
+            }
+        },
         "/orders/wechat/refresh-url/{trade_no}": {
-            "post": {
+            "put": {
                 "description": "refresh pay url",
                 "produces": [
                     "application/json"
@@ -128,6 +170,57 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/services.MakeOrderResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request",
+                        "schema": {
+                            "$ref": "#/definitions/cns_errors.RainbowErrorDetailInfo"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server error",
+                        "schema": {
+                            "$ref": "#/definitions/cns_errors.RainbowErrorDetailInfo"
+                        }
+                    }
+                }
+            }
+        },
+        "/orders/wechat/refund/{trade_no}": {
+            "put": {
+                "description": "refund pay",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Orders"
+                ],
+                "summary": "refund pay",
+                "operationId": "Refund",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "trade no",
+                        "name": "trade_no",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "refund_req",
+                        "name": "refund_req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/services.RefundReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "refund_detail",
+                        "schema": {
+                            "$ref": "#/definitions/models.WechatRefundDetail"
                         }
                     },
                     "400": {
@@ -240,6 +333,9 @@
                 "id": {
                     "type": "integer"
                 },
+                "refund_state": {
+                    "type": "string"
+                },
                 "time_expire": {
                     "type": "string"
                 },
@@ -247,13 +343,13 @@
                     "type": "string"
                 },
                 "trade_provider": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "trade_state": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "trade_type": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "updated_at": {
                     "type": "string"
@@ -290,6 +386,12 @@
                 "payer": {
                     "type": "string"
                 },
+                "refresh_status": {
+                    "type": "string"
+                },
+                "refund_no": {
+                    "type": "string"
+                },
                 "success_time": {
                     "type": "string"
                 },
@@ -313,27 +415,67 @@
                 }
             }
         },
-        "services.MakeOrderResp": {
+        "models.WechatRefundDetail": {
             "type": "object",
             "properties": {
-                "code_url": {
-                    "type": "string"
-                },
-                "h5_url": {
-                    "type": "string"
-                },
-                "trade_no": {
-                    "type": "string"
-                },
-                "trade_provider": {
+                "amount": {
+                    "description": "金额详细信息",
                     "type": "integer"
                 },
-                "trade_type": {
+                "channel": {
+                    "description": "枚举值： - ORIGINAL—原路退款 - BALANCE—退回到余额 - OTHER_BALANCE—原账户异常退到其他余额账户 - OTHER_BANKCARD—原银行卡异常退到其他银行卡 * `ORIGINAL` - 原路退款 * `BALANCE` - 退回到余额 * `OTHER_BALANCE` - 原账户异常退到其他余额账户 * `OTHER_BANKCARD` - 原银行卡异常退到其他银行卡",
+                    "type": "string"
+                },
+                "create_time": {
+                    "description": "退款受理时间，遵循rfc3339标准格式，格式为YYYY-MM-DDTHH:mm:ss+TIMEZONE，YYYY-MM-DD表示年月日，T出现在字符串中，表示time元素的开头，HH:mm:ss表示时分秒，TIMEZONE表示时区（+08:00表示东八区时间，领先UTC 8小时，即北京时间）。例如：2015-05-20T13:29:35+08:00表示，北京时间2015年5月20日13点29分35秒。",
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
+                "funds_account": {
+                    "description": "退款所使用资金对应的资金账户类型 枚举值： - UNSETTLED : 未结算资金 - AVAILABLE : 可用余额 - UNAVAILABLE : 不可用余额 - OPERATION : 运营户 - BASIC : 基本账户（含可用余额和不可用余额） * `UNSETTLED` - 未结算资金 * `AVAILABLE` - 可用余额 * `UNAVAILABLE` - 不可用余额 * `OPERATION` - 运营户 * `BASIC` - 基本账户（含可用余额和不可用余额）",
+                    "type": "string"
+                },
+                "id": {
                     "type": "integer"
+                },
+                "out_refund_no": {
+                    "description": "商户系统内部的退款单号，商户系统内部唯一，只能是数字、大小写字母_-|*@ ，同一退款单号多次请求只退一笔。",
+                    "type": "string"
+                },
+                "out_trade_no": {
+                    "description": "原支付交易对应的商户订单号",
+                    "type": "string"
+                },
+                "refund_id": {
+                    "type": "string"
+                },
+                "status": {
+                    "description": "退款到银行发现用户的卡作废或者冻结了，导致原路退款银行卡失败，可前往商户平台（pay.weixin.qq.com）-交易中心，手动处理此笔退款。 枚举值： - SUCCESS—退款成功 - CLOSED—退款关闭 - PROCESSING—退款处理中 - ABNORMAL—退款异常 * `SUCCESS` - 退款成功 * `CLOSED` - 退款关闭 * `PROCESSING` - 退款处理中 * `ABNORMAL` - 退款异常",
+                    "type": "string"
+                },
+                "success_time": {
+                    "description": "退款成功时间，退款状态status为SUCCESS（退款成功）时，返回该字段。遵循rfc3339标准格式，格式为YYYY-MM-DDTHH:mm:ss+TIMEZONE，YYYY-MM-DD表示年月日，T出现在字符串中，表示time元素的开头，HH:mm:ss表示时分秒，TIMEZONE表示时区（+08:00表示东八区时间，领先UTC 8小时，即北京时间）。例如：2015-05-20T13:29:35+08:00表示，北京时间2015年5月20日13点29分35秒。",
+                    "type": "string"
+                },
+                "transaction_id": {
+                    "description": "微信支付交易订单号",
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user_received_account": {
+                    "description": "取当前退款单的退款入账方，有以下几种情况： 1）退回银行卡：{银行名称}{卡类型}{卡尾号} 2）退回支付用户零钱:支付用户零钱 3）退还商户:商户基本账户商户结算银行账户 4）退回支付用户零钱通:支付用户零钱通",
+                    "type": "string"
                 }
             }
         },
-        "services.MakeWechatOrderReq": {
+        "services.MakeOrderReq": {
             "type": "object",
             "required": [
                 "amount",
@@ -352,7 +494,38 @@
                     "type": "integer"
                 },
                 "trade_type": {
-                    "type": "integer"
+                    "type": "string"
+                }
+            }
+        },
+        "services.MakeOrderResp": {
+            "type": "object",
+            "properties": {
+                "code_url": {
+                    "type": "string"
+                },
+                "h5_url": {
+                    "type": "string"
+                },
+                "trade_no": {
+                    "type": "string"
+                },
+                "trade_provider": {
+                    "type": "string"
+                },
+                "trade_type": {
+                    "type": "string"
+                }
+            }
+        },
+        "services.RefundReq": {
+            "type": "object",
+            "required": [
+                "reason"
+            ],
+            "properties": {
+                "reason": {
+                    "type": "string"
                 }
             }
         }
